third_party/WebKit/public/web/WebEmbeddedWorker.h
@@ -38,6 +38,7 @@ namespace blink {
 class WebServiceWorkerContextClient;
 class WebString;
 class WebWorkerContentSettingsClientProxy;
+struct WebConsoleMessage;
 struct WebEmbeddedWorkerStartData;
 
 // An interface to start and terminate an embedded worker.
@@ -67,6 +68,7 @@ public:
     virtual void reattachDevTools(const WebString& hostId, int sessionId, const WebString& savedState) = 0;
     virtual void detachDevTools() = 0;
     virtual void dispatchDevToolsMessage(int sessionId, const WebString&) = 0;
+    virtual void addMessageToConsole(const WebConsoleMessage&) = 0;
 };
 
 } // namespace blink
